# Permissions-Postgresql

./: README.md  db.sqlite3  manage.py  pyproject.toml
brandapi/: asgi.py  settings.py  urls.py  wsgi.py
car/: permissions.py  urls.py  views.py
car/migrations/: 0001_initial.py
